# zp

./: CLIPBOARD_SYNC_README.md  Cargo.toml  IMPLEMENTATION_PROGRESS.md  LICENSE  README.md  SYNC_USAGE.md  plan.md
src/: clipboard.rs  config.rs  daemon.rs  file.rs  history.rs  lib.rs  main.rs  p2p.rs  query.rs  run.rs
src/sync/: engine.rs  handler.rs  mod.rs  protocol.rs  server.rs
