[package]
name = "zp"
version = "0.1.1"
edition = "2021"
description = "Copy the contents of the source file to the clipboard, allowing users to easily paste the contents into another file or program."
documentation = "https://github.com/bahdotsh/zp"
homepage = "https://github.com/bahdotsh/zp"
repository = "https://github.com/bahdotsh/zp"
keywords = ["copy", "cmd", "copy-to-clipboard"]
categories = ["command-line-utilities", "text-processing"]
license = "Unlicense OR MIT"
exclude = ["HomebrewFormula"]

[dependencies]
arboard = "3.2.0"
clap = { version = "4.2.1", features = ["derive"] }
