[package]
name = "zp"
version = "1.2.1"
edition = "2021"
description = "Copy the contents of the source file or the standard output buffer to the clipboard, with support for maintaining a history of copied content, allowing users to easily paste into another file or program."
documentation = "https://github.com/bahdotsh/zp"
homepage = "https://github.com/bahdotsh/zp"
repository = "https://github.com/bahdotsh/zp"
keywords = ["copy", "cmd", "copy-to-clipboard"]
categories = ["command-line-utilities", "text-processing"]
license = "Unlicense OR MIT"
exclude = ["HomebrewFormula"]

[dependencies]
arboard = "3.3.0"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.8", features = ["derive"] }
crossterm = "0.27.0"
daemonize = "0.5.0"
is-terminal = "0.4.9"
ratatui = "0.24.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33", features = ["sync"] }
futures = "0.3"
lazy_static = "1.4"

[profile.release]
codegen-units = 1
lto = true
